// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtButton test in h5 render by default 1`] = `
<view
  className="at-button at-button--secondary at-button--medium"
  onClick={[Function]}
>
  <button
    className="at-button__wxbutton"
    lang="zh_CN"
  />
  <view
    className="at-button--secondary__text at-button--medium__text"
  >
    click me
  </view>
</view>
`;

exports[`AtButton test in h5 render by different size 1`] = `
Array [
  <view
    className="at-button at-button--secondary at-button--full"
    onClick={[Function]}
  >
    <button
      className="at-button__wxbutton"
      lang="zh_CN"
    />
    <view
      className="at-button--secondary__text at-button--full__text"
    >
      full
    </view>
  </view>,
  <view
    className="at-button at-button--secondary at-button--large"
    onClick={[Function]}
  >
    <button
      className="at-button__wxbutton"
      lang="zh_CN"
    />
    <view
      className="at-button--secondary__text at-button--large__text"
    >
      large
    </view>
  </view>,
  <view
    className="at-button at-button--secondary at-button--medium"
    onClick={[Function]}
  >
    <button
      className="at-button__wxbutton"
      lang="zh_CN"
    />
    <view
      className="at-button--secondary__text at-button--medium__text"
    >
      medium
    </view>
  </view>,
  <view
    className="at-button at-button--secondary at-button--mini"
    onClick={[Function]}
  >
    <button
      className="at-button__wxbutton"
      lang="zh_CN"
    />
    <view
      className="at-button--secondary__text at-button--mini__text"
    >
      mini
    </view>
  </view>,
  <view
    className="at-button at-button--secondary at-button--small"
    onClick={[Function]}
  >
    <button
      className="at-button__wxbutton"
      lang="zh_CN"
    />
    <view
      className="at-button--secondary__text at-button--small__text"
    >
      small
    </view>
  </view>,
  <view
    className="at-button at-button--secondary at-button--tiny"
    onClick={[Function]}
  >
    <button
      className="at-button__wxbutton"
      lang="zh_CN"
    />
    <view
      className="at-button--secondary__text at-button--tiny__text"
    >
      tiny
    </view>
  </view>,
]
`;

exports[`AtButton test in h5 render by different type 1`] = `
Array [
  <view
    className="at-button at-button--primary at-button--medium"
    onClick={[Function]}
  >
    <button
      className="at-button__wxbutton"
      lang="zh_CN"
    />
    <view
      className="at-button--primary__text at-button--medium__text"
    >
      primary
    </view>
  </view>,
  <view
    className="at-button at-button--secondary at-button--medium"
    onClick={[Function]}
  >
    <button
      className="at-button__wxbutton"
      lang="zh_CN"
    />
    <view
      className="at-button--secondary__text at-button--medium__text"
    >
      secondary
    </view>
  </view>,
  <view
    className="at-button at-button--tertiary at-button--medium"
    onClick={[Function]}
  >
    <button
      className="at-button__wxbutton"
      lang="zh_CN"
    />
    <view
      className="at-button--tertiary__text at-button--medium__text"
    >
      tertiary
    </view>
  </view>,
]
`;
